--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
       -->
   	  <li><a href="index.html">Home</a></li>
   	  <li><a href="about.html">About Me</a></li>
-  	  <li><a href="plan.html">My Plan</a></li>
+  	  <li><a href="plan.html">The Plan</a></li>
   	</ul>
   </nav>
   <div>
