Fixed footer, fixed links, updated text

--- a/plan.html
+++ b/plan.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link href="style.css" rel="stylesheet" type="text/css" >
-  <!-- Open Sans font from Google -->
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-  <title>My Github Page</title>
-</head>
-<body>
-  <nav>
-  	<ul>
-  	  <!-- 
-      Check if its necersary to create separate pages
-      -->
-  	  <li><a href="index.html">Home</a></li>
-  	  <li><a href="about.html">About Me</a></li>
-  	  <li><a href="plan.html">The Plan</a></li>
-  	</ul>
-  </nav>
-  <div>
-  	<h1 class="second-headers">The Plan</h1>
-  	<p class="second-paras">
-      I plan to work through <a href="https://github.com/open-source-society/computer-science">OSS University's Computer Science program</a>. I'll do this alongside <a href="www.bento.io">Bento.io</a>'s full stack track. I doubt I'll complete the OSS curriculum but what I do finish will at least give me some background in the theory behind computer science.
-    </p>
-    <h5>Currently Studying:</h5>
-    <p>MIT's 'Introduction to Computer Science and Programming Using Python' on <a href="https://www.edx.org/course/introduction-computer-science-mitx-6-00-1x-6!">edX</a></p>
-  </div>
-  <div id="follow">
-    <p class="second-paras">Follow me on:</p>
-    <a class="logo" href="https://www.codecademy.com/elissed">
-      <img src="images/codecademy.svg" alt="Codecademy Link">
-    </a>
-    <a class="logo" href="https://courses.edx.org/u/elissed">
-      <img src="images/edx.png" alt="edX Link">
-    </a>
-  </div>
-  <footer>
-  	<h3>Created by Elissed.</h3>
-  </footer>
-</body>
+  <head>
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <title>My Github Page</title>
+  </head>
+  <body>
+    <nav>
+      <ul>
+      	<li><a id="anav" href="index.html">Home</a></li>
+      	<li><a id="anav" href="about.html">About Me</a></li>
+      	<li><a id="anav" href="plan.html">The Plan</a></li>
+      </ul>
+    </nav>
+    <div>
+      <h1 class="hsecond">The Plan</h1>
+      <p class="pplan">
+        I plan to work through <a href="https://github.com/open-source-society/computer-science">OSS University's Computer Science program</a>. I'll do this alongside <a href="https://www.bento.io">Bento.io</a>'s full stack track. I doubt I'll complete the OSS curriculum but what I do finish will at least give me some background into the theory behind computer science.
+      </p>
+      <div id="currently">
+        <h2>Currently Studying</h2>
+        <p class="pplan">MIT's 'Introduction to Computer Science and Programming Using Python' (6.00.1x) on <a href="https://www.edx.org/course/introduction-computer-science-mitx-6-00-1x-6!">edX</a></p>
+        <p class="pplan">Harvard's 'Introduction to Computer Science' (CS50x) on <a href="https://www.edx.org/course/introduction-computer-science-harvardx-cs50x">edX</a></p>
+        <p class="pplan">'Javascript' on <a href="https://www.codecademy.com/learn/javascript">Codecademy</a></p>
+      </div>
+    </div>
+    <div id="follow">
+      <h2>Follow me on</h2>
+      <a class="logo" href="https://www.codecademy.com/elissed">
+        <img src="images/codecademy.svg" alt="Codecademy Link">
+      </a>
+      <a class="logo" href="https://courses.edx.org/u/elissed">
+        <img src="images/edx.png" alt="edX Link">
+      </a>
+    </div>
+    <footer>
+      <h3>Created by Elissed</h3>
+    </footer>
+  </body>
 </html>
