Fixed edX/MIT hyperlink

--- a/plan.html
+++ b/plan.html
@@ -20,7 +20,7 @@
       </p>
       <div id="currently">
         <h2>Currently Studying</h2>
-        <p class="pplan">MIT's 'Introduction to Computer Science and Programming Using Python' (6.00.1x) on <a href="https://www.edx.org/course/introduction-computer-science-mitx-6-00-1x-6!">edX</a></p>
+        <p class="pplan">MIT's 'Introduction to Computer Science and Programming Using Python' (6.00.1x) on <a href="https://www.edx.org/course/introduction-computer-science-mitx-6-00-1x">edX</a></p>
         <p class="pplan">Harvard's 'Introduction to Computer Science' (CS50x) on <a href="https://www.edx.org/course/introduction-computer-science-harvardx-cs50x">edX</a></p>
         <p class="pplan">'Javascript' on <a href="https://www.codecademy.com/learn/javascript">Codecademy</a></p>
       </div>
